@@ -10,6 +10,7 @@ CHANGE: Core  | Improved optimistic unchoke anti-leech algorithms [Nolar]
 BUGFIX: Core  | DHT protocol version logic fixes [Parg]
 BUGFIX: Core  | Fix for 100% cpu when more than 60 connections are registered with a selector under buggy network stacks [Nolar]
 BUGFIX: Core  | Invalid listen port configuration would prevent Azureus from starting [Nolar]
+BUGFIX: Core  | Added hooks to catch Windows shutdown events to allow graceful Azureus exit [Nolar]
 
 
 
